@@ -316,7 +316,7 @@ static void
 usage(const char *me)
 {
 	fprintf(stderr,
-	    "USAGE: %s [-fn] [-c config] | [-6h] [-d certs-dir] [-H host]\n"
+	    "USAGE: %s [-fn] [-c config] [-P pidfile] | [-6h] [-d certs-dir] [-H host]\n"
 	    "       [-p port] [-x cgi] [dir]\n",
 	    me);
 }
@@ -411,6 +411,34 @@ serve(int argc, char **argv, struct imsgbuf *ibuf)
 	_exit(executor_main(ibuf));
 }
 
+static int
+write_pidfile(const char *pidfile)
+{
+	struct flock	lock;
+	int		fd;
+
+	if (pidfile == NULL)
+		return -1;
+
+	if ((fd = open(pidfile, O_WRONLY|O_CREAT|O_CLOEXEC, 0600)) == -1)
+		fatal("can't open pidfile %s: %s", pidfile, strerror(errno));
+
+	lock.l_start = 0;
+	lock.l_len = 0;
+	lock.l_type = F_WRLCK;
+	lock.l_whence = SEEK_SET;
+
+	if (fcntl(fd, F_SETLK, &lock) == -1)
+		fatal("can't lock %s, gmid is already running?", pidfile);
+
+	if (ftruncate(fd, 0) == -1)
+		fatal("ftruncate: %s: %s", pidfile, strerror(errno));
+
+	dprintf(fd, "%d\n", getpid());
+
+	return fd;
+}
+
 static void
 setup_configless(int argc, char **argv, const char *cgi)
 {
@@ -434,12 +462,12 @@ main(int argc, char **argv)
 {
 	struct imsgbuf exibuf;
 	int ch, conftest = 0, configless = 0;
-	int old_ipv6, old_port;
-	const char *cgi = NULL;
+	int pidfd, old_ipv6, old_port;
+	const char *pidfile = NULL, *cgi = NULL;
 
 	init_config();
 
-	while ((ch = getopt(argc, argv, "6c:d:fH:hnp:vx:")) != -1) {
+	while ((ch = getopt(argc, argv, "6c:d:fH:hnP:p:vx:")) != -1) {
 		switch (ch) {
 		case '6':
 			conf.ipv6 = 1;
@@ -470,6 +498,10 @@ main(int argc, char **argv)
 
 		case 'n':
 			conftest = 1;
+			break;
+
+		case 'P':
+			pidfile = optarg;
 			break;
 
 		case 'p':
@@ -535,6 +567,8 @@ main(int argc, char **argv)
 		setup_configless(argc, argv, cgi);
 		return 0;
 	}
+
+	pidfd = write_pidfile(pidfile);
 
 	/* Linux seems to call the event handlers even when we're
 	 * doing a sigwait.  These dummy handlers are here to avoid
@@ -603,6 +637,9 @@ main(int argc, char **argv)
 
 	imsg_compose(&logibuf, IMSG_QUIT, 0, 0, -1, NULL, 0);
 	imsg_flush(&logibuf);
+
+	if (pidfd != -1)
+		close(pidfd);
 
 	return 0;
 }
